cursive-bootstrap/tests/ui/E-CON/E-CON-0142.cursive
// RUN: compile-fail
// DIAG: E-CON-0142
// SPEC: 8.9
// DESC: Cross-iteration dependency detected

procedure cross_iteration(domain: $ExecutionDomain) -> () {
    var arr: [i32; 10] = [0; 10]
    parallel domain {
        dispatch i in 1..10 {
            arr[i] = arr[i - 1] + 1  //~ ERROR E-CON-0142: cross-iteration dependency
        }
    }
    return ()
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
